# check-latest-rs

./: .editorconfig  .gitattributes  .travis.yml  CHANGELOG.md  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  release.yml
examples/: async.rs  basic.rs
src/: error.rs  lib.rs  max.rs  newest.rs
src/async/: max.rs  mod.rs  newest.rs
src/blocking/: max.rs  mod.rs  newest.rs
