[package]
name = "check-latest"
version = "0.1.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Check if your rust executable is the latest available version"
readme = "README.md"
keywords = ["version", "latest"]
categories = []
repository = "https://github.com/spenserblack/check-latest-rs"
exclude = [".github/*", ".gitignore", ".editorconfig", ".travis.yml", "CHANGELOG.md"]

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]
async = []

[dependencies]
reqwest = { version = "0.10.1", features = ["json"] }
semver = "0.9.0"
serde_json = "1.0"

[badges]
travis-ci = { repository = "spenserblack/check-latest-rs" }
is-it-maintained-issue-resolution = { repository = "spenserblack/check-latest-rs" }
is-it-maintained-open-issues = { repository = "spenserblack/check-latest-rs" }
maintenance = { status = "passively-maintained" }
