[package]
name = "check-latest"
version = "1.0.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"
description = "Check if your rust executable is the latest available version"
readme = "README.md"
keywords = ["version", "latest"]
categories = []
repository = "https://github.com/spenserblack/check-latest-rs"
exclude = [".github/*", ".gitignore", ".editorconfig", ".travis.yml", "CHANGELOG.md"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]
async = []

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4.10", features = ["serde"] }
reqwest = { version = "0.10.1", features = ["json"] }
semver = { version = "0.10.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }

[dev-dependencies]
lazy_static = "1"
tokio = { version = "0.2", features = ["macros"] }

[[example]]
name = "basic-usage"
path = "examples/basic.rs"
required-features = ["blocking"]

[[example]]
name = "async"
path = "examples/async.rs"
required-features = ["async"]

[badges]
travis-ci = { repository = "spenserblack/check-latest-rs" }
is-it-maintained-issue-resolution = { repository = "spenserblack/check-latest-rs" }
is-it-maintained-open-issues = { repository = "spenserblack/check-latest-rs" }
maintenance = { status = "passively-maintained" }
