[package]
name = "check-latest"
version = "1.1.0"
authors = ["Spenser Black <spenserblack01@gmail.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Check if your rust executable is the latest available version"
readme = "README.md"
keywords = ["version", "latest"]
categories = []
repository = "https://github.com/spenserblack/check-latest-rs"
exclude = [".github/*", ".gitignore", ".editorconfig", "CHANGELOG.md"]

[package.metadata.docs.rs]
all-features = true

[features]
default = ["blocking"]
blocking = ["reqwest/blocking"]
async = []

[dependencies]
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["serde"] }
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls", "json"] }
semver = { version = "1", default-features = false, features = ["serde"] }
serde = { version = "1", default-features = false, features = ["derive"] }

[dev-dependencies]
lazy_static = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[[example]]
name = "basic-usage"
path = "examples/basic.rs"
required-features = ["blocking"]

[[example]]
name = "async"
path = "examples/async.rs"
required-features = ["async"]
